--- a/impressum.html
+++ b/impressum.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Friseur</title>
+  <title>Impressum/Datenschutz</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="allg.css">
 </head>
@@ -19,7 +19,7 @@
   <header id="navigation">
     <div class="container">
       <!--Nav Logo-->
-      <a href="" class="logo" aria-label="back to home">
+      <a href="/index.html" class="logo" aria-label="back to home">
         <img src="/images/Originalfotos/logo.png" alt="logo" width="210" height="29" aria-hidden="true"
           decoding="async">
       </a>
@@ -124,9 +124,11 @@
           a. Kontaktinformationen: Bei Nutzung der bereitgestellten Kontaktformulare oder E-Mail-Adressen
           können Ihre Angaben gespeichert werden.<br>
 
-          b. Logdateien: Bei jedem Zugriff auf unsere Website werden Nutzungsdaten durch den
+          b. Logdateien und Google Analytics: Bei jedem Zugriff auf unsere Website werden Nutzungsdaten durch den
           Internetbrowser übermittelt und in Protokolldateien (Server-Logfiles) gespeichert. Eine Nutzung dieser
-          Internetseite ist trotzem ohne Cookies möglich!
+          Internetseite ist jedoch auch ohne Cookies möglich! Bitte beachten Sie, dass wir Google Analytics verwenden,
+          um anonymisierte Besucherstatistiken zu erstellen. Die Erfassung dieser Daten erfolgt jedoch erst nach Ihrer
+          Einwilligung, die Sie beim erstmaligen Besuch der Website durch Ihre Cookie-Präferenzen erteilen können.
         </p>
 
         <span class="bb-header">Hosting
@@ -151,9 +153,11 @@
         </p>
 
         <p>
-          Diese Website betreibt keine aktiven Cookies oder Tracking-Technologien, wodurch ein
-          Cookiebanner und aktive Zustimmungsklicks nicht erforderlich sind. Bei weiteren Fragen zum
-          Datenschutz stehen wir Ihnen gerne zur Verfügung.
+          Diese Website verwendet Cookies, und wir bitten um Ihre Einwilligung beim erstmaligen Besuch. Durch die
+          Zustimmung ermöglichen Sie uns, Cookies und ähnliche Tracking-Technologien zu verwenden, um die
+          Website-Nutzung zu analysieren, Benutzerfreundlichkeit zu verbessern und personalisierte Inhalte anzuzeigen.
+          Ein Cookiebanner wird angezeigt, um Ihre Präferenzen zu erfragen, und Ihre Zustimmung erfolgt durch einen
+          aktiven Klick. Bei weiteren Fragen zum Datenschutz stehen wir Ihnen gerne zur Verfügung.
         </p>
 
 
@@ -222,7 +226,7 @@
 
         <span class="bb-header">Datenschutz:
         </span>
-        <p>Die Nutzung unserer Webseite ist in der Regel ohne Angabe personenbezogener Daten möglich. Soweit
+        <p>Soweit
           auf unseren Seiten personenbezogene Daten (beispielsweise Name, Anschrift oder E-Mail-Adressen)
           erhoben werden, erfolgt dies, soweit möglich, stets auf freiwilliger Basis.</p>
 
