--- a/kontakt.html
+++ b/kontakt.html
@@ -256,24 +256,23 @@
 
 
 <!-- Cookie Consent by TermsFeed https://www.TermsFeed.com -->
-<script type="text/javascript" src="//www.termsfeed.com/public/cookie-consent/4.1.0/cookie-consent.js"
-  charset="UTF-8"></script>
+<script type="text/javascript" src="//www.termsfeed.com/public/cookie-consent/4.1.0/cookie-consent.js" charset="UTF-8"></script>
 <script type="text/javascript" charset="UTF-8">
-  document.addEventListener('DOMContentLoaded', function () {
-    cookieconsent.run({ "notice_banner_type": "interstitial", "consent_type": "express", "palette": "dark", "language": "de", "page_load_consent_levels": ["strictly-necessary"], "notice_banner_reject_button_hide": false, "preferences_center_close_button_hide": false, "page_refresh_confirmation_buttons": false, "website_name": "bitte-ein-byte" });
-  });
+document.addEventListener('DOMContentLoaded', function () {
+cookieconsent.run({"notice_banner_type":"interstitial","consent_type":"express","palette":"dark","language":"de","page_load_consent_levels":["strictly-necessary"],"notice_banner_reject_button_hide":false,"preferences_center_close_button_hide":false,"page_refresh_confirmation_buttons":false,"website_name":"bitte-ein-byte"});
+});
 </script>
 
 <!-- Google Analytics -->
+
 <!-- Google tag (gtag.js) -->
-<script type="text/plain" data-cookie-consent="tracking" async
-  src="https://www.googletagmanager.com/gtag/js?id=G-TSV3SMWLSM"></script>
+<script type="text/plain" data-cookie-consent="tracking" async src="https://www.googletagmanager.com/gtag/js?id=G-Q7NK9XDHKM"></script>
 <script type="text/plain" data-cookie-consent="tracking">
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-TSV3SMWLSM');
+  gtag('config', 'G-Q7NK9XDHKM');
 </script>
 <!-- end of Google Analytics-->
 
@@ -287,6 +286,7 @@
 <!-- Below is the link that users can use to open Preferences Center to change their preferences. Do not modify the ID parameter. Place it where appropriate, style it as needed. -->
 
 <a href="#" id="open_preferences_center">Update cookies preferences</a>
+
 
 
 </body>
